--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Shoes</a>
-                    <a class="nav-item nav-link" href="#">Backpack</a>
+                    <a class="nav-item nav-link" href="#">Sign in</a>
+                    <a class="nav-item nav-link" href="#">Sign up</a>
                     <a class="nav-item nav-link" href="#">Contact Us</a>
+                    <a class="nav-item nav-link" href="#">Cart <img width="5%" src="images/icon/cart.png" alt=""></a>
                 </div>
             </div>
         </nav>
@@ -40,7 +41,8 @@
                     <div class="row align-items-center">
                         <div class="col-md-7">
                             <h1>Mi LED TV 4A PRO 32</h1>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore rem illum dolore voluptates quis laudantium reiciendis facere!</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore
+                                rem illum dolore voluptates quis laudantium reiciendis facere!</p>
                             <h1 class="price">$1200</h1>
                             <button class="custom-button">Buy Now >></button>
                         </div>
@@ -53,7 +55,8 @@
                     <div class="row align-items-center">
                         <div class="col-md-7">
                             <h1>Cool Dude Headphone</h1>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore rem illum dolore voluptates quis laudantium reiciendis facere!</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore
+                                rem illum dolore voluptates quis laudantium reiciendis facere!</p>
                             <h1 class="price">$420</h1>
                             <button class="custom-button">Buy Now >></button>
                         </div>
@@ -66,7 +69,8 @@
                     <div class="row banner align-items-center">
                         <div class="col-md-7">
                             <h1>X-Box</h1>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore rem illum dolore voluptates quis laudantium reiciendis facere!</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita neque labore
+                                rem illum dolore voluptates quis laudantium reiciendis facere!</p>
                             <h1 class="price">$600</h1>
                             <button class="custom-button">Buy Now >></button>
                         </div>
@@ -91,27 +95,188 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="cat1 d-flex justify-content-between align-items-center">
-                    <h1>Watch</h1>
+                    <h1><a class="link" href="#watch">Watch</a></h1>
                     <img src="images/categories/watch.png" alt="Watch Picture">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="cat2 d-flex justify-content-between align-items-center">
-                    <h1>Bag</h1>
+                    <h1><a class="link" href="#backpack">Backpack</a></h1>
                     <img src="images/categories/bag.png" alt="">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="cat3 d-flex justify-content-between align-items-center">
-                    <h1>Shoes</h1>
+                    <h1><a class="link" href="#shoes">Shoes</a></h1>
                     <img src="images/categories/shoes.png" alt="">
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="container shoes" id="watch">
+        <h1 class="center-header">Watch</h1>
+        <hr class="horizontal-row">
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/watch/watch-1.png" alt="Shoe 1 image">
+                <div class="card-body">
+                    <h5 class="card-title">Supply 260</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/watch/watch-2.png" alt="Shoe 2 image">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 350</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/watch/watch-3.png" alt="Shoe 3 image">
+                <div class="card-body">
+                    <h5 class="card-title">Red Airmax</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container backpack" id="backpack">
+        <h1 class="center-header">Backpack</h1>
+        <hr class="horizontal-row">
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-1.png" alt="bag 1 image">
+                <div class="card-body">
+                    <h5 class="card-title">Supply 260</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-2.png" alt="bag 2 image">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 350</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-3.png" alt="bag 3 image">
+                <div class="card-body">
+                    <h5 class="card-title">Red Airmax</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container shoes" id="shoes">
+        <h1 class="center-header">Shoes</h1>
+        <hr class="horizontal-row">
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-1.png" alt="Shoe 1 image">
+                <div class="card-body">
+                    <h5 class="card-title">Supply 260</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-2.png" alt="Shoe 2 image">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 350</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-3.png" alt="Shoe 3 image">
+                <div class="card-body">
+                    <h5 class="card-title">Red Airmax</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-around">
+                        <button class="custom-button">Buy Now >></button>
+                        <button class="custom-button">Add to Cart >></button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container contact d-flex justify-content-center align-items-center" id="contact">
+        <div>
+            <h3>LET"S STAY IN TOUCH</h3>
+            <p>Get updates on specials and more</p>
+            <input class="form-control" type="text" placeholder="Enter your email">
+            <button class="custom-button">Submit</button>
+        </div>
+    </div>
+
+    <div class="container copyright">
+        <p>© Panda E-commerce 2020. All rights reserved. Sofia, Bulgeria</p>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
