signin, signupm, cart added

--- a/signin.html
+++ b/signin.html
@@ -20,12 +20,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="index.html">Home <span
-                            class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="signin.html">Sign in</a>
+                    <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="signin.html">Sign in</a>
                     <a class="nav-item nav-link" href="signup.html">Sign up</a>
                     <a class="nav-item nav-link" href="#contact">Contact Us</a>
-                    <a class="nav-item nav-link" href="#">Cart <img width="5%" src="images/icon/cart.png" alt=""></a>
+                    <a class="nav-item nav-link" href="cart.html">Cart <img width="5%" src="images/icon/cart.png" alt=""></a>
                 </div>
             </div>
         </nav>
@@ -34,11 +33,9 @@
 
     <div class="container sign-in-box d-flex justify-content-center align-items-center">
         <form action="">
-            <h3>Email: </h3>
             <input class="form-control" pattern="" placeholder="Enter your email" type="email" name="" id=""><br>
-            <h3>Password: </h3>
             <input class="form-control" placeholder="Enter password" type="password"><br>
-            <button class="custom-button" type="submit">Submit Form</button>
+            <button class="custom-button" type="submit">Sign In</button>
         </form>
     </div>
 
