--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="signin.html">Sign in</a>
-                    <a class="nav-item nav-link" href="#">Sign up</a>
+                    <a class="nav-item nav-link" href="signup.html">Sign up</a>
                     <a class="nav-item nav-link" href="#contact">Contact Us</a>
-                    <a class="nav-item nav-link" href="#">Cart <img width="5%" src="images/icon/cart.png" alt=""></a>
+                    <a class="nav-item nav-link" href="cart.html">Cart <img width="5%" src="images/icon/cart.png" alt=""></a>
                 </div>
             </div>
         </nav>
